gcc/testsuite/rust/compile/issue-3614.rs
#[repr] // { dg-error "malformed .repr. attribute" }

struct _B {}
